IB: Min Steps in Infinite Grid